--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,14 @@
 sonar.projectKey=java-maven-junit-helloworld
-sonar.projectName=java-maven-junit-helloworld
-sonar.java.binaries=.
+sonar.projectName=nitin-java-maven-junit-helloworld
+sonar.projectVersion=1.0
+sonar.language=java
 sonar.java.sources=.
 sonar.sources=.
+sonar.tests=src/test
+sonar.junit.reportsPath=target/surefire-reports
+sonar.surefire.reportsPath=target/surefire-reports
+sonar.jacoco.reportPath=target/jacoco.exec
+sonar.binaries=target/classes
+sonar.java.coveragePlugin=jacoco
 sonar.sourceEncoding=UTF-8
+sonar.host.url=http://18.224.155.110:9000
